--- a/www/src/scss/sections/_nav.scss
+++ b/www/src/scss/sections/_nav.scss
@@ -7,7 +7,7 @@ nav {
 
     li {
       list-style: none;
-      font-size: 1.05em;
+      font-size: 1.15rem;
 
       a {
         text-decoration: none;
@@ -24,7 +24,7 @@ nav {
       img {
         height: auto;
         width: 100%;
-        max-width: 150px;
+        max-width: 100px;
       }
     }
   }
