--- a/www/src/scss/main.scss
+++ b/www/src/scss/main.scss
@@ -5,7 +5,9 @@
 
 @import "globals/variables";
 
+@import "globals/images";
 @import "globals/globals";
 
+@import "sections/footer";
 @import "sections/icons";
 @import "sections/nav";
