--- a/www/src/scss/sections/_nav.scss
+++ b/www/src/scss/sections/_nav.scss
@@ -9,6 +9,14 @@ nav {
       list-style: none;
       font-size: 1.15rem;
 
+      &:first-child {
+        a {
+          &:hover {
+            border-bottom: none;
+          }
+        }
+      }
+
       a {
         text-decoration: none;
         text-transform: uppercase;
@@ -17,7 +25,7 @@ nav {
         margin: 0 1rem;
 
         &:hover {
-          border-bottom: 3px solid #40a1da;
+          border-bottom: 3px solid $primary-color;
         }
       }
 
