--- a/www/src/scss/globals/_variables.scss
+++ b/www/src/scss/globals/_variables.scss
@@ -1,6 +1,6 @@
 $primary-color: #35537b;
 $secondary-color: #afbb3c;
-$tertary-color: #f9b000;
+$tertiary-color: #f9b000;
 
 $link-color: #343434;
 
