--- a/www/src/scss/sections/_footer.scss
+++ b/www/src/scss/sections/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  background-color: $tertary-color;
+  background-color: $tertiary-color;
   padding: 4rem 0;
   width: 100%;
   color: $footer-text;
