--- a/www/src/scss/sections/_icons.scss
+++ b/www/src/scss/sections/_icons.scss
@@ -17,7 +17,7 @@
     background-color: $secondary-color;
   }
   .fa-school {
-    background-color: $tertary-color;
+    background-color: $tertiary-color;
   }
 
   a {
