--- a/www/src/scss/sections/_nav.scss
+++ b/www/src/scss/sections/_nav.scss
@@ -1,3 +1,9 @@
+header {
+  &.container {
+    position: relative;
+  }
+}
+
 nav {
   ul {
     align-items: baseline;
@@ -22,7 +28,7 @@ nav {
         text-transform: uppercase;
         padding: .5rem .5rem;
         transition: ease-in-out .1s;
-        margin: 0 1rem;
+        margin: 0 .25rem;
 
         &:hover {
           border-bottom: 3px solid $secondary-color;
@@ -34,6 +40,11 @@ nav {
         width: 100%;
         max-width: 100px;
       }
+    }
+
+    &.socials {
+      position: absolute;
+      right: 0;
     }
   }
 }
