contacts and fotogalery innit

--- a/www/src/scss/main.scss
+++ b/www/src/scss/main.scss
@@ -8,7 +8,9 @@
 @import "globals/images";
 @import "globals/globals";
 
+@import "sections/contacts";
 @import "sections/footer";
+@import "sections/fotogalery";
 @import "sections/icons";
 @import "sections/nav";
 @import "sections/news";
