--- a/www/src/scss/sections/_footer.scss
+++ b/www/src/scss/sections/_footer.scss
@@ -12,7 +12,11 @@ footer {
     color: $footer-text;
   }
 
-  .fa-facebook, .fa-instagram, .fa-phone, .fa-location-dot, .fa-at {
+  .fa-facebook,
+  .fa-instagram,
+  .fa-phone,
+  .fa-location-dot,
+  .fa-at {
     color: $footer-text;
   }
 }
