--- a/www/src/scss/globals/_globals.scss
+++ b/www/src/scss/globals/_globals.scss
@@ -44,7 +44,8 @@ a {
   font-weight: bold;
 }
 
-.container, .container-fluid {
+.container,
+.container-fluid {
   padding: 0;
 }
 
@@ -55,12 +56,12 @@ a {
 }
 
 #background {
-  background-image: url("../assets/claim-index.jpg");
+  background-image: url('../assets/claim-index.jpg');
   height: 300px;
 }
 
 @include media-breakpoint-down(md) {
   .row {
-    margin: 0 .5rem;
+    margin: 0 0.5rem;
   }
 }
