--- a/www/src/scss/globals/_images.scss
+++ b/www/src/scss/globals/_images.scss
@@ -1,9 +1,10 @@
 img {
-  width: auto;
-  min-width: 100px;
-  height: 100%;
+  width: 100%;
+  max-width: 400px;
+  height: auto;
 
-  &.pardubice-img, &.upol-img {
+  &.pardubice-img,
+  &.upol-img {
     max-height: 200px;
   }
 
@@ -13,5 +14,6 @@ img {
 
   &.portal-img {
     max-height: 150px;
+    max-width: 200px;
   }
 }
