--- a/www/src/scss/sections/_fotogalery.scss
+++ b/www/src/scss/sections/_fotogalery.scss
@@ -3,7 +3,8 @@
     border-radius: 50%;
 
     &.fotogalery-img {
-      max-height: 200px;
+      height: 300px;
+      max-width: 300px;
     }
   }
 }
