--- a/www/src/scss/sections/_icons.scss
+++ b/www/src/scss/sections/_icons.scss
@@ -3,7 +3,9 @@
 }
 
 .icons {
-  .fa-chalkboard-user, .fa-graduation-cap, .fa-school {
+  .fa-chalkboard-user,
+  .fa-graduation-cap,
+  .fa-school {
     border-radius: 50%;
     color: $white;
     padding: 2.5rem;
@@ -26,7 +28,7 @@
 
     &.rotate {
       svg {
-        transition: ease-in-out .2s;
+        transition: ease-in-out 0.2s;
 
         &:hover {
           transform: scale(1.07) rotate(7deg);
