--- a/www/src/scss/sections/_nav.scss
+++ b/www/src/scss/sections/_nav.scss
@@ -26,9 +26,9 @@ nav {
       a {
         text-decoration: none;
         text-transform: uppercase;
-        padding: .5rem .5rem;
-        transition: ease-in-out .1s;
-        margin: 0 .25rem;
+        padding: 0.5rem 0.5rem;
+        transition: ease-in-out 0.1s;
+        margin: 0 0.25rem;
 
         &:hover {
           border-bottom: 3px solid $secondary-color;
@@ -56,10 +56,10 @@ nav {
 
 #sub-nav {
   background-color: $primary-color;
-  margin-top: .7rem;
+  margin-top: 0.7rem;
 
   ul {
-    margin: .5rem;
+    margin: 0.5rem;
     padding: 1rem;
     text-align: center;
 
@@ -69,8 +69,8 @@ nav {
       a {
         color: $white;
         margin: 1rem 3rem;
-        transition: ease-in-out .1s;
-        padding: .25rem .25rem;
+        transition: ease-in-out 0.1s;
+        padding: 0.25rem 0.25rem;
 
         &:hover {
           border-bottom: 2px solid $white;
