--- a/www/src/scss/globals/_globals.scss
+++ b/www/src/scss/globals/_globals.scss
@@ -8,12 +8,21 @@ html {
 
 body {
   margin: 0;
+  min-height: 100vh;
   position: relative;
+}
+
+main {
+  padding-bottom: 10rem;
 }
 
 a {
   text-decoration: none;
   color: $link-color;
+
+  &:visited {
+    color: $link-visited;
+  }
 }
 
 .text-center {
@@ -42,6 +51,10 @@ a {
 
 .bold {
   font-weight: bold;
+}
+
+.italic {
+  font-style: italic;
 }
 
 .container,
