--- a/www/src/scss/globals/_variables.scss
+++ b/www/src/scss/globals/_variables.scss
@@ -1,10 +1,13 @@
 $primary-color: #35537b;
-$secondary-color: #afbb3c;
-$tertiary-color: #f9b000;
+$secondary-color: #96ae34;
+$tertiary-color: #258c89;
 
-$link-color: #343434;
 
 $white: #ffffff;
 $gray: #f6f6f5;
 
-$footer-text: #fdefcc;
+$footer-text: white;
+
+//links
+$link-color: #343434;
+$link-visited: #35537b;
