--- a/www/src/scss/main.scss
+++ b/www/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import 'globals/globals';
 @import 'globals/stripes';
 
+@import 'sections/applicants';
 @import 'sections/contacts';
 @import 'sections/footer';
 @import 'sections/fotogalery';
