--- a/www/src/scss/main.scss
+++ b/www/src/scss/main.scss
@@ -14,7 +14,7 @@
 @import 'globals/stripes';
 
 @import 'sections/applicants';
-@import 'sections/contacts';
+@import 'sections/out-team';
 @import 'sections/footer';
 @import 'sections/fotogalery';
 @import 'sections/icons';
