--- a/www/src/scss/sections/_nav.scss
+++ b/www/src/scss/sections/_nav.scss
@@ -1,6 +1,19 @@
 header {
+  background-color: white;
+  min-width: available;
+  min-width: -moz-available;
+  padding: .75rem 1rem 1rem 0 !important;
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+
   &.container {
     position: relative;
+  }
+
+  img.logo {
+    position: absolute;
+    top: 7px;
   }
 }
 
@@ -8,31 +21,26 @@ nav {
   ul {
     align-items: baseline;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: end;
     padding: 0;
-    margin-bottom: 11px;
+    margin-bottom: 0;
 
     li {
       list-style: none;
       font-size: 1.15rem;
 
-      &:first-child {
-        a {
-          &:hover {
-            border-bottom: none;
-          }
-        }
-      }
-
       &.burger {
         display: none;
-        margin-right: 1rem;
-        padding: 0.5rem;
+        margin: 0;
+        padding: .5rem 1.5rem;
 
         &.open {
           padding-bottom: 1.5rem;
 
           .line {
-            margin-bottom: -4px;
+            //TODO - fix burger
+            //margin-bottom: -4px;
             transition: transform 0.5ms;
             width: 1.75rem;
 
@@ -41,7 +49,8 @@ nav {
             }
 
             &:nth-child(2) {
-              display: none;
+              opacity: 0;
+              visibility: hidden;
             }
 
             &:last-child {
@@ -61,54 +70,84 @@ nav {
           cursor: pointer;
         }
       }
+    }
 
-      &.mobile-menu {
-        display: none;
-        transition: ease-in-out 0.5s;
+    &.mobile-menu {
+      height: 0;
+      margin: 0;
+      opacity: 0;
+      transition: ease-in-out 0.2s;
+      visibility: collapse;
 
-        &.shown {
-          background-color: #ede9d0;
-          display: flex;
-          flex-wrap: wrap;
+      &.shown {
+        background-color: $gray;
+        display: block;
+        height: 85vh;
+        opacity: 100;
+        visibility: visible;
+
+        li {
+          position: relative;
           width: 100%;
-          position: absolute;
-          top: 6.25rem;
+
+          a {
+            display: inline-block;
+            height: 45px;
+            line-height: 45px;
+            padding-left: 1rem;
+            width: 100%;
+            white-space: nowrap;
+
+            &:after {
+              background: black;
+              bottom: 0;
+              content: "";
+              height: 2px;
+              left: 25%;
+              position: absolute;
+              width: 50%;
+            }
+
+            &:hover, :active {
+              border-bottom: none;
+            }
+          }
         }
-
-        a {
-          margin: 0.5rem 1rem;
-          width: 100%;
-        }
-      }
-
-      a {
-        text-decoration: none;
-        text-transform: uppercase;
-        padding: 0.5rem 0.5rem;
-        transition: ease-in-out 0.1s;
-        margin: 0 0.25rem;
-
-        &:hover {
-          border-bottom: 3px solid $secondary-color;
-        }
-
-        &.active {
-          border-bottom: 3px solid $secondary-color;
-          font-weight: bold;
-        }
-      }
-
-      img {
-        height: auto;
-        width: 100%;
-        max-width: 100px;
       }
     }
 
-    &.socials {
-      position: absolute;
-      right: 0;
+    a {
+      margin: 0 0.25rem;
+      padding: 0.5rem 0.5rem;
+      text-decoration: none;
+      text-transform: uppercase;
+      transition: ease-in-out 0.1s;
+
+      &:hover {
+        border-bottom: 3px solid $secondary-color;
+      }
+
+      &:active {
+        border-bottom: none;
+      }
+
+      &.active {
+        border-bottom: 3px solid $secondary-color;
+        font-weight: bold;
+      }
     }
+
+    img {
+      height: auto;
+      width: 100%;
+      max-width: 100px;
+    }
+  }
+}
+
+#socials {
+  a:hover {
+    border-bottom: 0;
   }
 }
 
@@ -117,12 +156,15 @@ nav {
   margin-top: 0.7rem;
 
   ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin: 0.5rem;
-    padding: 1rem;
-    text-align: center;
+    padding: .5rem;
 
     li {
       list-style: none;
+      padding: .5rem;
 
       a {
         color: $white;
@@ -144,29 +186,46 @@ nav {
 }
 
 @include media-breakpoint-down(xl) {
-  .menu {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
+  header {
+    img.logo {
+      max-width: 94px;
+    }
   }
 
-  nav {
-    ul {
-      li {
-        a {
-          margin: 0;
 
-          &:last-child {
-            margin-right: inherit;
-          }
-        }
-      }
+  nav ul#main-navigation li {
+    font-size: 1rem;
+
+    a {
+      padding: 0.5rem 0.25rem;
     }
   }
 }
 
-@include media-breakpoint-down(sm) {
-  .menu {
+@include media-breakpoint-down(lg) {
+  header {
+    img.logo {
+      max-width: 50px;
+    }
+  }
+
+  #socials {
+    margin: 0;
+  }
+
+  nav ul#main-navigation li {
+    font-size: 0.9rem;
+  }
+}
+
+@include media-breakpoint-down(md) {
+  header {
+    img.logo {
+      max-width: 74px;
+    }
+  }
+
+  #main-navigation {
     display: none;
   }
 
