--- a/www/src/scss/sections/_news.scss
+++ b/www/src/scss/sections/_news.scss
@@ -20,3 +20,21 @@
     max-width: 200px;
   }
 }
+
+
+@include media-breakpoint-down(lg) {
+  .news {
+    article {
+      &.odd {
+        border-left: none;
+        border-top: 2px solid $secondary-color;
+      }
+
+      &.even {
+        border-left: none;
+        border-top: 2px solid $primary-color;
+      }
+
+    }
+  }
+}
