Menu fixes, submenu sticky

--- a/www/src/scss/components/_icons.scss
+++ b/www/src/scss/components/_icons.scss
@@ -38,10 +38,16 @@
       }
     }
 
-    
-
     svg {
       margin-bottom: 1rem;
     }
   }
+}
+
+.fa-bullhorn, .fa-file-pen {
+  color: $primary-color;
+}
+
+.fa-calendar {
+  color: $secondary-color;
 }
