--- a/www/src/scss/main.scss
+++ b/www/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import 'components/boxes';
 @import 'components/buttons';
 @import 'components/form';
+@import 'components/icons';
 
 @import 'globals/images';
 @import 'globals/globals';
@@ -17,6 +18,5 @@
 @import 'sections/out-team';
 @import 'sections/footer';
 @import 'sections/fotogalery';
-@import 'sections/icons';
 @import 'sections/nav';
 @import 'sections/news';
