--- a/www/src/scss/sections/_applicants.scss
+++ b/www/src/scss/sections/_applicants.scss
@@ -1,14 +1,17 @@
-.for-applicants {
-  section {
+section {
+  &.for-applicants {
     margin-top: 1rem;
-    padding-left: 1rem;
 
-    &.odd {
-      border-left: 2px solid $secondary-color;
-    }
+    article {
+      padding-left: 1rem;
 
-    &.even {
-      border-left: 2px solid $primary-color;
+      &.odd {
+        border-left: 2px solid $secondary-color;
+      }
+      
+      &.even {
+        border-left: 2px solid $primary-color;
+      }
     }
   }
 
