--- a/www/src/scss/globals/_globals.scss
+++ b/www/src/scss/globals/_globals.scss
@@ -77,6 +77,10 @@ a {
   }
 }
 
+.h-100 {
+  height: 100vh;
+}
+
 #background {
   background-image: url('../assets/claim-index.jpg');
   height: 300px;
