--- a/www/src/scss/sections/_applicants.scss
+++ b/www/src/scss/sections/_applicants.scss
@@ -8,7 +8,7 @@ section {
       &.odd {
         border-left: 2px solid $secondary-color;
       }
-      
+
       &.even {
         border-left: 2px solid $primary-color;
       }
@@ -21,6 +21,28 @@ section {
 
     &:visited {
       color: $link-visited;
+    }
+  }
+}
+
+@include media-breakpoint-down(lg) {
+  section.for-applicants {
+    article {
+      padding-left: 0;
+
+      &.odd {
+        border-left: none;
+        border-top: 2px solid $secondary-color;
+      }
+
+      &.even {
+        border-left: none;
+        border-top: 2px solid $primary-color;
+      }
+
+      p {
+        margin-bottom: 3rem;
+      }
     }
   }
 }
