--- a/www/src/scss/sections/_nav.scss
+++ b/www/src/scss/sections/_nav.scss
@@ -1,6 +1,6 @@
 header {
   background-color: white;
-  min-width: available;
+  min-width: -webkit-fill-available;
   min-width: -moz-available;
   padding: .75rem 0 1rem !important;
   position: fixed;
@@ -35,18 +35,19 @@ nav {
         margin: 0;
         padding: .5rem 1.5rem;
         position: relative;
+        right: 12px;
+        top: 12px;
 
         &.open {
-          padding-bottom: 1.5rem;
+          padding-bottom: 2.5rem;
 
           .line {
-            //TODO - fix burger
-            //margin-bottom: -4px;
             transition: transform 0.5ms;
             width: 1.75rem;
 
             &:first-child {
               transform: rotate(45deg);
+              top: 8px;
             }
 
             &:nth-child(2) {
@@ -66,10 +67,18 @@ nav {
           height: 0.25rem;
           margin-bottom: 0.25rem;
           width: 1.5rem;
+          position: absolute;
+
+          &:first-child {
+            top: 0;
+          }
+
+          &:nth-child(2) {
+            top: 8px;
+          }
           
           &:last-child {
-            position: absolute;
-            top: 0;
+            top: 16px;
           }
         }
 
@@ -89,9 +98,10 @@ nav {
       &.shown {
         background-color: $primary-color;
         display: block;
-        height: 85vh;
+        height: 100vh;
         opacity: 100;
         visibility: visible;
+        width: 100vw;
         
         li {
           position: relative;
@@ -136,7 +146,7 @@ nav {
     }
 
     a {
-      margin: 0 0.25rem;
+      margin: 0 0.5rem;
       padding: 0.5rem 0.5rem;
       text-decoration: none;
       text-transform: uppercase;
@@ -172,14 +182,13 @@ nav {
 
 #sub-nav {
   background-color: $primary-color;
-  margin-top: 0.7rem;
   position: sticky;
-  top: 112px;
-
+  top: 114px;
+  
   ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     margin: 0.5rem;
     padding: .5rem;
 
@@ -189,7 +198,6 @@ nav {
 
       a {
         color: $white;
-        margin: 1rem 3rem;
         transition: ease-in-out 0.1s;
         padding: 0.25rem 0.25rem;
 
@@ -234,6 +242,10 @@ nav {
     margin: 0;
   }
 
+  #sub-nav {
+    top: 92px;
+  }
+
   nav ul#main-navigation li {
     font-size: 0.9rem;
   }
@@ -244,6 +256,8 @@ nav {
     img.logo {
       max-width: 74px;
     }
+
+    min-height: 60px;
   }
 
   #main-navigation {
@@ -252,5 +266,14 @@ nav {
 
   .burger {
     display: block !important;
+  }
+
+
+  #sub-nav {
+    top: 88px;
+
+    ul {
+      flex-direction: column;
+    }
   }
 }
