--- a/www/src/scss/sections/_footer.scss
+++ b/www/src/scss/sections/_footer.scss
@@ -22,7 +22,9 @@ footer {
   .fa-instagram,
   .fa-phone,
   .fa-location-dot,
-  .fa-at {
+  .fa-comment {
     color: $footer-text;
+    height: 35px;
+    vertical-align: middle;
   }
 }
